# Zipeasy

./: .check.sh  .dockerignore  .gitattributes  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: docker.yml  tests.yml
src/zipeasy/: logging_config.py  main.py  settings.py
src/zipeasy/static/: scripts.js  styles.css
src/zipeasy/templates/: index.html
tests/: conftest.py  test_example.py
